<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:text="@string/login_title"
            android:textSize="42sp"
            android:layout_marginTop="100dp"
            android:elevation="20dp"
            />


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="30dp"
            android:hint="@string/login_username"
            android:inputType="textEmailAddress"
            android:textSize="26sp"
            />
        <EditText
            android:layout_marginHorizontal="10dp"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:layout_marginTop="16dp"
            android:textSize="26sp"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone"
            android:layout_marginStart="1dp"
            android:digits="0123456789"
            android:maxLength="10"
            android:layout_marginHorizontal="10dp"
            android:textSize="26sp"
            android:inputType="phone"
            />
        <TextView
            android:gravity="end"
            android:padding="10dp"
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/forgot_password"
            android:textColor="#26428b"
            />
        <Button
            android:id="@+id/btnLogin"
            android:layout_marginHorizontal="10dp"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:text="@string/login_title"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            />
        <TextView
            android:gravity="start"
            android:padding="10dp"
            android:id="@+id/tvgender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="10dp"
            android:text="GENDER"
            android:textColor="#26428b"
            />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbHe"
                android:layout_weight="1"
                android:text="@string/he"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbShe"
                android:layout_weight="1"
                android:text="@string/she"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbOther"
                android:layout_weight="1"
                android:text="@string/others"/>
        </RadioGroup>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etOtherName"
            android:hint="@string/enter_gender"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>
</layout>
